spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,13 @@
 }
 
 .input-style {
-  @apply w-full border border-gray-300 rounded-[24px] 2k:rounded-[80px] py-4 2k:py-8 px-4 2k:px-8 text-xs 2k:text-4xl placeholder:text-gray-400;
+  @apply w-full border border-gray-300 rounded-[24px] 2k:rounded-[80px] py-5 2k:py-8 px-4 2k:px-8 text-xs 2k:text-4xl placeholder:text-custom-gray;
   border: 1px solid #e2e2e2;
   box-shadow: 0px 4px 16px 0px #3c3c3c14;
 }
 
 .button-style {
-  @apply bg-gradient-to-r from-[#4A90E2] to-[#2877D5] py-2 2k:py-4 px-10 2k:px-14 rounded-full text-white transition-all duration-300 ease-out transform hover:scale-105 focus:outline-none;
+  @apply bg-gradient-to-r from-[#4A90E2] to-[#2877D5] py-3 2k:py-4 px-12 2k:px-14 rounded-full text-white font-semibold transition-all duration-300 ease-out transform hover:scale-105 focus:outline-none;
   animation: smart-animate 300ms ease-out;
 }
 
